# rcli

./: Cargo.toml
assets/: blake3.txt
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  mod.rs  text.rs
